@@ -11,7 +11,7 @@ plugins {
 import org.asciidoctor.gradle.AsciidoctorTask
 
 group 'org.ysb33r.gradle'
-version '0.2'
+version '0.3-SNAPSHOT'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
